add universal input

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,21 @@
 .App > div {
   margin-right: 50px;
 }
+
+.error {
+  border: red 1px solid;
+}
+
+.error-message {
+  color: red
+}
+
+.active-filter{
+  background-color: aquamarine;
+}
+
+.is-done {
+  opacity: 0.6;
+  text-decoration: line-through;
+	text-decoration-color: rgb(212, 0, 255);
+}
